[package]
name = "lualscheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
lsp-types = "0.94.1"
miette = { version = "5.10.0", features = ["fancy"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
path-absolutize = "3.1.1"
pathdiff = "0.2.1"
pretty_env_logger = "0.5.0"
serde_json = "1.0.107"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
